right gap of viewport fixed

--- a/style.css
+++ b/style.css
@@ -2,6 +2,22 @@
 
 body{
     overflow-x: hidden;
+    
+    
+}
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (-o-min-device-pixel-ratio: 3/2),
+only screen and (min--moz-device-pixel-ratio: 1.5),
+only screen and (min-device-pixel-ratio: 1.5){
+
+  html,
+  body{
+    width:100%;
+    overflow-x:hidden;
+  }
+
 }
 .header{
     background-image:url('bg.jpg');
@@ -56,3 +72,18 @@ button:hover{
     color:white;
   
 }
+
+
+::-webkit-scrollbar{
+    width:5px;
+    height:2px;
+  }
+  ::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 1px grey;
+    border-radius: 5px;
+  }
+  ::-webkit-scrollbar-thumb{
+    background: black;
+  }
+
+
